exports[`test generate a loader 1`] = `
Object {
  "loader": "// @flow

import DataLoader from \'dataloader\';
import ConnectionFromMongoCursor from \'../connection/ConnectionFromMongoCursor\';
import ExampleModel from \'../model/Example\';

type ExampleType = {
  id: string,
  _id: string,
  exampleField: string,
}

export default class Example {
  id: string;
  _id: string;
  exampleField: string;

  static ExampleLoader = new DataLoader(
    ids => Promise.all(
      ids.map(id =>
        ExampleModel.findOne({ _id: id })
      ),
    ),
  );

  constructor(data: ExampleType) {
    this.id = data.id;
    this._id = data._id;
    this.exampleField = data.exampleField;
  }

  static viewerCanSee(viewer, data) {
    // TODO: handle security

    return true;
  }

  static async load(viewer, id) {
    const data = await Example.ExampleLoader.load(id.toString());

    return Example.viewerCanSee(viewer, data) ? new Example(data) : null;
  }

  static clearCache(id) {
    return Example.ExampleLoader.clear(id.toString());
  }

  static async loadExamples(viewer, args) {
    // TODO: specify conditions
    const examples = ExampleModel.find({});

    return ConnectionFromMongoCursor.connectionFromMongoCursor(
      viewer, examples, args, Example.load,
    );
  }
}
",
}
`;

exports[`test generate a loader with Schema 1`] = `
Object {
  "loader": "// @flow

import DataLoader from \'dataloader\';
import ConnectionFromMongoCursor from \'../connection/ConnectionFromMongoCursor\';
import PostModel from \'../model/Post\';

type PostType = {
  id: string,
  _id: string,
  title: string,
  user: string,
  slug: string,
}

export default class Post {
  id: string;
  _id: string;
  title: string;
  user: string;
  slug: string;

  static PostLoader = new DataLoader(
    ids => Promise.all(
      ids.map(id =>
        PostModel.findOne({ _id: id })
      ),
    ),
  );

  constructor(data: PostType) {
    this.id = data.id;
    this._id = data._id;
    this.title = data.title;
    this.user = data.user;
    this.slug = data.slug;
  }

  static viewerCanSee(viewer, data) {
    // TODO: handle security

    return true;
  }

  static async load(viewer, id) {
    const data = await Post.PostLoader.load(id.toString());

    return Post.viewerCanSee(viewer, data) ? new Post(data) : null;
  }

  static clearCache(id) {
    return Post.PostLoader.clear(id.toString());
  }

  static async loadPostss(viewer, args) {
    // TODO: specify conditions
    const posts = PostModel.find({});

    return ConnectionFromMongoCursor.connectionFromMongoCursor(
      viewer, posts, args, Post.load,
    );
  }
}
",
}
`;
